[gd_scene load_steps=9 format=3 uid="uid://bjfj2xkprqmul"]

[ext_resource type="Script" path="res://scripts/gameplay/game.gd" id="1_1qp53"]
[ext_resource type="AudioStream" uid="uid://cmu155l35wrr6" path="res://songs/round1/round1.ogg" id="1_qvdc0"]
[ext_resource type="Script" path="res://scripts/audio/Conductor.gd" id="2_m70td"]
[ext_resource type="Texture2D" uid="uid://i5v0g4wbki0f" path="res://scripts/sprites/wipbg.png" id="5_6mrjx"]
[ext_resource type="PackedScene" uid="uid://dysy0ojqquyh5" path="res://scene/uppercut_handler.tscn" id="5_ah5md"]
[ext_resource type="AudioStream" uid="uid://up45eeo0mdlu" path="res://songs/sounds/ping.mp3" id="5_l6t4d"]
[ext_resource type="PackedScene" uid="uid://b5a85et3hbvkt" path="res://scene/player.tscn" id="6_dblby"]
[ext_resource type="PackedScene" uid="uid://8gim7dabpts8" path="res://scene/Textbox.tscn" id="7_st8ni"]

[node name="Game" type="Node2D"]
script = ExtResource("1_1qp53")

[node name="Wipbg" type="Sprite2D" parent="."]
position = Vector2(128, 72)
scale = Vector2(1.05869, 1.05869)
texture = ExtResource("5_6mrjx")

[node name="Conductor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_qvdc0")
script = ExtResource("2_m70td")

[node name="UppercutTimer" type="Timer" parent="Conductor"]

[node name="Ping" type="AudioStreamPlayer2D" parent="Conductor"]
stream = ExtResource("5_l6t4d")
volume_db = -2.123

[node name="GUI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="GUI"]
offset_right = 256.0
offset_bottom = 195.0
color = Color(0, 0, 0, 0)

[node name="UppercutHandler" parent="GUI" instance=ExtResource("5_ah5md")]
position = Vector2(128, 78)

[node name="Label" type="Label" parent="GUI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Textbox" parent="GUI" instance=ExtResource("7_st8ni")]
position = Vector2(32, 127)

[node name="Player" parent="." instance=ExtResource("6_dblby")]
metadata/_edit_group_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 136)
limit_left = -60
limit_top = -35
limit_right = 315
limit_bottom = 190
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
editor_draw_limits = true
metadata/_edit_group_ = true

[connection signal="changeCamScale" from="Conductor" to="." method="_on_conductor_change_cam_scale"]
[connection signal="cueHit" from="Conductor" to="." method="_on_conductor_cue_hit"]
[connection signal="textDisplay" from="Conductor" to="." method="_on_conductor_text_display"]
[connection signal="uppercutHit" from="Conductor" to="." method="_on_conductor_uppercut_hit"]
[connection signal="timeout" from="Conductor/UppercutTimer" to="Conductor" method="_on_uppercut_timer_timeout"]
[connection signal="hit_uc" from="GUI/UppercutHandler" to="." method="_on_uppercut_handler_hit_uc"]
[connection signal="miss_uc" from="GUI/UppercutHandler" to="." method="_on_uppercut_handler_miss_uc"]
